@@ -1,0 +1,4 @@
+[
+    "http://betaradio.googlecode.com/svn/trunk/utils/hichannel.json"
+    "http://betaradio.googlecode.com/svn/trunk/utils/ptt.json",
+]
