@@ -1,0 +1,9 @@
+{
+	"title": "PTT Radio",
+	"url": "http://pttradio.net/",
+    "channel": [
+        "title": "PTT Radio",
+        "type": "mp3"
+        "url": "http://cast.ptt.cc:8000/yes",
+    ]
+}
